--- a/build.gradle
+++ b/build.gradle
@@ -33,7 +33,8 @@ ext {
     ktxVersion = "1.1.0"
     retrofitVersion = "2.6.0"
     koinVersion = "2.0.1"
-    roomVersion = "2.1.0"
+    roomVersion = "2.2.3"
+    pagingVersion = "2.1.1"
     truthVersion = "0.44"
     coroutinesVersion = "1.2.1"
     mockitoVersion = "3.0.0"
