Add loading animation. Minor bug fix for DiffUtil

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,6 +68,9 @@ dependencies {
     // Monet - Custom image loading implementation
     implementation project(":monet")
 
+    // Lottie
+    implementation "com.airbnb.android:lottie:$lottieVersion"
+
     // Testing
     testImplementation "com.google.truth:truth:$truthVersion"
     testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutinesVersion"
